--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-docopt==0.6.2
-scipy==0.17.0
-flask-swagger==0.2.12
+awscli==1.10.32
+coverage==4.0.3
 cssselect==0.9.1
+docopt==0.6.2
+flask==0.10.1
+flask-swagger==0.2.12
 nose==1.3.7
+pyhive==0.1.6
+scipy==0.17.0
