--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ docopt==0.6.2
 flask==0.10.1
 flask-swagger==0.2.12
 nose==1.3.7
+numpy==1.11.0
 pyhive==0.1.6
-scipy==0.17.0
 pylint==1.5.5
+scipy==0.17.0
