--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,6 @@
     "angular-resource": "1.3.12",
     "angular-sanitize": "1.3.12",
     "showdown": "0.3.1",
-    "angular-aui": "whummer/angular-aui#feat/aui-toggle"
+    "angular-aui": "git://github.com/whummer/angular-aui.git#feat/aui-toggle"
   }
 }
