--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ flask==0.10.1
 flask-swagger==0.2.12
 nose==1.3.7
 numpy==1.11.0
+pep8==1.7.0
 pyhive==0.1.6
-pylint==1.5.5
 requests==2.10.0
 scipy==0.17.0
 subprocess32==3.2.7
