code restructuring: add classes for configurations, make UI and model more generic (to support EMR and Kinesis in the near future)

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 .DS_Store
 node_modules/
 monitoring.data.db
-autoscaling.config.json*
-autoscaling.clusters.json*
+*.config.json*
+*.clusters.json*
+*.resources.json*
 nosetests.xml
 /.coverage
 *.log
