--- a/bin/autoscaler.service
+++ b/bin/autoscaler.service
@@ -14,7 +14,7 @@ running=`ps aux | grep server_and_loop | grep -v grep | awk '{print $2}'`
 echo "Running: $running"
 start() {
     echo "Starting autoscaler in screen session"
-    (cd $loc && sudo -u $user screen -S autoscaler -d -m bash -c "make server")
+    (cd $loc && sudo -u $user screen -S autoscaler -d -m bash -c 'eval `ssh-agent -s` && themis server_and_loop --port=8081 --log=themis.log')
 }
 stop() {
     ps aux | grep server_and_loop | grep -v grep | awk '{print $2}' | xargs kill
