--- a/themis/web/package.json
+++ b/themis/web/package.json
@@ -12,6 +12,7 @@
     "angular-ui-router": "0.2.13",
     "angular-resource": "1.3.12",
     "angular-sanitize": "1.3.12",
+    "angular-growl-v2": "0.7.5",
     "showdown": "0.3.1",
     "angular-aui": "git://github.com/whummer/angular-aui.git#feat/aui-toggle"
   }
