--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ nose==1.3.7
 numpy==1.11.0
 pep8==1.7.0
 pyhive==0.1.6
+python-coveralls==2.7.0
 requests==2.10.0
 scipy==0.17.0
 subprocess32==3.2.7
