--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ flask-swagger==0.2.12
 nose==1.3.7
 numpy==1.11.0
 pep8==1.7.0
+pandas==0.18.1
 pyhive==0.1.6
 python-coveralls==2.7.0
 requests==2.10.0
