--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,9 @@ numpy==1.11.0
 pep8==1.7.0
 pandas==0.18.1
 pyhive==0.1.6
+PyMySQL==0.7.9
 python-coveralls==2.7.0
 requests==2.10.0
 scipy==0.17.0
+sqlalchemy==1.1.3
 subprocess32==3.2.7
